deploy/python-counts.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-counts
spec:
  replicas: 1
  selector:
    matchLabels:
      app: python-counts
  template:
    metadata:
      labels:
        app: python-counts
    spec:
      containers:
        - name: python-counts
          image: 'appademin/sci-python-counts:1.0.0'
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: web
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: python-counts-service
spec:
  selector:
    app: python-counts
  ports:
    - protocol: TCP
      port: 8080
