deploy/adminer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adminer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: adminer
  template:
    metadata:
      labels:
        app: adminer
    spec:
      containers:
        - name: adminer
          image: 'adminer:latest'
          ports:
            - containerPort: 8080
              name: web
              protocol: TCP
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: adminer-service
spec:
  selector:
    app: adminer
  ports:
    - protocol: TCP
      port: 8080
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: appademin-sci-adminer
  namespace: appademin-ryggmargsskadecentrum
spec:
  host: a.apps.k8s.gu.se
  to:
    kind: Service
    name: adminer-service
    weight: 100
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
