deploy/api-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: api
  namespace: appademin-ryggmargsskadecentrum
  annotations:
    kubernetes.io/tls-acme: "true"
spec:
  host: sci-api.prod.appadem.in
  to:
    kind: Service
    name: api-service
    weight: 100
  port:
    targetPort: 4000
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
