deploy/api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: api
          image: 'registry.k8s.gu.se/appademin-ryggmargsskadecentrum/sci-api:1.27.6'
          imagePullPolicy: Always
          ports:
            - containerPort: 4000
              name: web
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: api-service
spec:
  selector:
    app: api
  ports:
    - protocol: TCP
      port: 4000
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
    name: hci-gu-se
    annotations:
        kubernetes.io/tls-acme: 'true'
spec:
    host: hci.gu.se
    to:
        kind: Service
        name: hci-gu-se-service
        weight: 100
    port:
        targetPort: 3000
    tls:
        termination: edge
        insecureEdgeTerminationPolicy: Redirect
    wildcardPolicy: None
